<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp"
    android:background="@drawable/background">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/ic_earth"
        android:padding="20dp"/>


    <ScrollView
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:padding="8dp"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                app:passwordToggleDrawable="@drawable/show_pass"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColorHint="#fff"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:padding="8dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                app:passwordToggleDrawable="@drawable/show_pass"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_pass"
                    android:textColorHint="#fff"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:padding="8dp"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:background="@drawable/sign_up_button"
                style="@style/TextAppearance.AppCompat.Body1"
                android:textAllCaps="false"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>